tests/ui/mismatched_types/fn-pointer-mismatch-diagnostics.stderr
error[E0308]: mismatched types
  --> $DIR/method-output-diff-issue-127263.rs:6:26
   |
LL |     let b: fn() -> u32 = bar;
   |            -----------   ^^^ expected fn pointer, found fn item
   |            |
   |            expected due to this
   |
   = note: expected fn pointer `fn() -> u32`
                 found fn item `fn() -> () {bar}`

error[E0308]: mismatched types
  --> $DIR/method-output-diff-issue-127263.rs:7:22
   |
LL |     let f: fn(i32) = foo;
   |            -------   ^^^ expected fn pointer, found fn item
   |            |
   |            expected due to this
   |
   = note: expected fn pointer `fn(_) -> ()`
                 found fn item `fn(_) -> u32 {foo}`

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0308`.
